--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@ ul {
     padding: 0;
     margin: 0;
   }
+  
+* {
+    box-sizing: border-box;
+}
+  
+body {
+    font-family: 'Roboto', sans-serif;
+}
+  
+input{
+    font-family: 'Roboto', sans-serif;
+}
